@@ -68,6 +68,7 @@ type
     ImageOpsiBackground: TImage;
     LabelInfo: TLabel;
     ActivityBar: TProgressBar;
+    TimerOnTop: TTimer;
     TimerProcessMess: TTimer;
     TimerActivity: TTimer;
     TimerDetail: TTimer;
@@ -98,6 +99,7 @@ type
     procedure TimerCommandTimer(Sender: TObject);
     procedure TimerActivityTimer(Sender: TObject);
     procedure TimerDetailTimer(Sender: TObject);
+    procedure TimerOnTopTimer(Sender: TObject);
     procedure TimerProcessMessTimer(Sender: TObject);
 
   private
@@ -158,7 +160,7 @@ var
   //FBatchOberflaeche: TosGUIControl;//TFBatchOberflaeche;
   LableInfoDefaultFontSize: integer;
 
-  BatchWindowMode, SavedBatchWindowMode: TBatchWindowMode;
+  BatchWindowMode, SavedBatchWindowMode, aktBatchWindowMode: TBatchWindowMode;
   FormMoving: boolean;
   MousePos: TPoint;
   z: TBitmap;
@@ -239,10 +241,9 @@ begin
 
 
   Panel.DoubleBuffered := True;
-  { will be set in osmain accourding to cli parameters -> runSilent }
-  //Visible := True;
 
-  setWindowState(bwmNormalWindow);
+  // window state is controlled commandline parameters
+  //setWindowState(bwmNormalWindow);
   Position := poScreenCenter;
   if ScaleDesignToForm(Height) < ScaleDesignToForm(InnerHeight) + ScaleDesignToForm(StartTop) then
     StartTop := (ScaleDesignToForm(Height) - ScaleDesignToForm(InnerHeight)) div ScaleDesignToForm(2);
@@ -606,23 +607,30 @@ end;
 
 procedure TFBatchOberflaeche.ForceStayOnTop(YesNo: boolean);
 begin
+    if Assigned(LogDatei) then
+  LogDatei.log_prog('ForceStayOnTop start: '+BoolToStr(YesNo,true), LLnotice);
   if YesNo then
   begin
-    setWindowState(bwmMaximized);
     { make to system wide top most window }
     FormStyle := fsSystemStayOnTop;
     BringToFront;
-    Application.ProcessMessages;
     { now allow new started windows (setup) to get the system wide top most position }
     FormStyle := fsStayOnTop;
     BatchScreenOnTop := True;
+    // call onTopTimer event
+    TimerOnTopTimer(TimerOnTop);
+    // enable onTopTimer
+    TimerOnTop.Enabled:= true;
   end
   else
   begin
     FormStyle := fsnormal;
     BatchScreenOnTop := False;
-    Application.ProcessMessages;
+    // disable onTopTimer
+    TimerOnTop.Enabled:= false;
   end;
+  setWindowState(aktBatchWindowMode);
+  Application.ProcessMessages;
 end;
 
 
@@ -766,14 +774,23 @@ begin
 end;
 
 procedure TFBatchOberflaeche.SetBatchWindowMode(BatchWindowMode: TBatchWindowMode);
+var
+  BWModeStr: string;
 begin
+  if Assigned(LogDatei) then
+  begin
+    WriteStr(BWModeStr, BatchWindowMode);
+    LogDatei.log_prog('SetBatchWindowMode start: ' + BWModeStr, LLinfo);
+  end;
   setWindowState(BatchWindowMode);
+  aktBatchWindowMode := BatchWindowMode;
 end;
 
 procedure TFBatchOberflaeche.FormCloseQuery(Sender: TObject; var CanClose: boolean);
 begin
   CanClose := False;
-  setWindowState(bwmNormalWindow);
+  // SetBatchWindowMode also store the mode in aktBatchWindowMode;
+  SetBatchWindowMode(bwmNormalWindow);
   Position := poScreenCenter;
   SetBounds(StartLeft, StartTop, InnerWidth, InnerHeight);
 end;
@@ -971,6 +988,17 @@ procedure TFBatchOberflaeche.TimerDetailTimer(Sender: TObject);
 begin
   timeDetailLabel := True;
   TimerDetail.Enabled := False;
+end;
+
+procedure TFBatchOberflaeche.TimerOnTopTimer(Sender: TObject);
+begin
+  if TTimer(Sender).Enabled then
+  begin
+    if Assigned(LogDatei) then
+      LogDatei.log_prog('TimerOnTopTimer start ', LLnotice);
+    BringToFront;
+    Application.ProcessMessages;
+  end;
 end;
 
 procedure TFBatchOberflaeche.TimerProcessMessTimer(Sender: TObject);
