@@ -1192,7 +1192,8 @@ begin
     {$ENDIF WINDOWS}
     goOn := True;
     {$IFDEF GUI}
-    FBatchOberflaeche.SetForceStayOnTop(False);
+    // in build pc mode we want stay on top
+    FBatchOberflaeche.SetForceStayOnTop(True);
     {$ENDIF GUI}
     DontUpdateMemo := True;
     FlagReloadProductList := False;
@@ -1623,8 +1624,6 @@ begin
   goOn := True;
   {$IFDEF GUI}
   FBatchOberflaeche.SetForceStayOnTop(False);
-  //BatchWindowMode := bwmNormalWindow;
-  //FBatchOberflaeche.setWindowState(BatchWindowMode);
   {$ENDIF GUI}
   maxtries := 10;
   trycounter := 0;
@@ -1765,9 +1764,7 @@ begin
   LogDatei.LogProduktId := False;
   goOn := True;
   {$IFDEF GUI}
-  FBatchOberflaeche.SetForceStayOnTop(False);
-  //BatchWindowMode := bwmNormalWindow;
-  //FBatchOberflaeche.setWindowState(BatchWindowMode);
+  FBatchOberflaeche.SetForceStayOnTop(True);
   {$ENDIF GUI}
   DontUpdateMemo := True;
 
