@@ -10076,6 +10076,8 @@ begin
     {$IFDEF GUI}
     if AutoActivityDisplay then
       FBatchOberflaeche.SetElementVisible(True, eActivityBar);//showAcitvityBar(True);
+    // do not force on top while running external programs
+    FBatchOberflaeche.SetForceStayOnTop(false);
 
     if not WaitForReturn then
       showoutput := False;
@@ -10280,6 +10282,9 @@ from defines.inc
     {$IFDEF GUI}
     FBatchOberflaeche.SetElementVisible(False, eActivityBar);//showAcitvityBar(False);
 
+    // force on top after running external programs
+    FBatchOberflaeche.SetForceStayOnTop(true);
+
     if showoutput then
     begin
       SystemInfo.Free;
@@ -10323,6 +10328,8 @@ begin
     {$IFDEF GUI}
     if AutoActivityDisplay then
       FBatchOberflaeche.SetElementVisible(True, eActivityBar); //showAcitvityBar(True);
+    // do not force on top while running external programs
+    FBatchOberflaeche.SetForceStayOnTop(false);
     {$ENDIF GUI}
 
     if (lowercase(archparam) = '64bit') and Is64BitSystem then
@@ -10370,6 +10377,8 @@ begin
   finally
     {$IFDEF GUI}
     FBatchOberflaeche.SetElementVisible(False, eActivityBar);//showAcitvityBar(False);
+    // force on top after running external programs
+    FBatchOberflaeche.SetForceStayOnTop(true);
     {$ENDIF GUI}
   end;
 end;
@@ -10517,6 +10526,8 @@ begin
     {$IFDEF GUI}
     if AutoActivityDisplay then
       FBatchOberflaeche.SetElementVisible(True, eActivityBar);//showAcitvityBar(True);
+    // do not force on top while running external programs
+    FBatchOberflaeche.SetForceStayOnTop(false);
     {$ENDIF GUI}
 
     commandline := FileName + ' ' + trim(Parameters);
@@ -10572,6 +10583,8 @@ begin
   finally
     {$IFDEF GUI}
     FBatchOberflaeche.SetElementVisible(False, eActivityBar);//showAcitvityBar(False);
+    // force on top after running external programs
+    FBatchOberflaeche.SetForceStayOnTop(true);
     {$ENDIF GUI}
   end;
 end;
@@ -11629,6 +11642,8 @@ begin
       {$IFDEF GUI}
       if AutoActivityDisplay then
         FBatchOberflaeche.SetElementVisible(True, eActivityBar); //showActivityBar(True);
+      // do not force on top while running external programs
+      FBatchOberflaeche.SetForceStayOnTop(false);
       {$ENDIF GUI}
       if threaded then
       begin
@@ -11744,6 +11759,8 @@ begin
   finally
     {$IFDEF GUI}
     FBatchOberflaeche.SetElementVisible(False, eActivityBar);//showAcitvityBar(False);
+    // force on top after running external programs
+    FBatchOberflaeche.SetForceStayOnTop(true);
     {$ENDIF GUI}
   end;
 end;
