@@ -2,6 +2,12 @@ todo:
 isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system
 mac getIpByName liefert name von IPnum
 
+
+* [fix] osbatchgui: batchgui via timer nach vorne schieben, configurierbar ?
+          (#47, , d.oertel 2024-04-30)
+          call FBatchOberflaeche.SetForceStayOnTop with false before and with true after running a process
+          SetForceStayOnTop will also switch the TimerOnTop on / off
+
 opsi-script (4.12.14.1) unreleased/unreleased (4.2/4.3); urgency=medium
 
 * [fix]  readConfigsFromService in /ServiceBatch: fix for opsi-script running in the context of opsi-template-with-userlogin
